# map_ws_demo

./: README.md  main.py  pyproject.toml
static/: app.js  index.html  style.css
